<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal"
            android:text="@string/title_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000000"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:backgroundTint="#d3381c"
            android:text="@string/button_text"
            app:cornerRadius="28dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:textColor="#FFFFFF"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cornerRadius="28dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:backgroundTint="#F2D58A"
            android:text="@string/button2_text"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="#d7003a"
            android:text="@string/button3_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:autoSizeTextType="uniform"
            app:cornerRadius="28dp" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:cornerRadius="28dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:backgroundTint="#0D0015"
            android:text="@string/button4_text"
            app:autoSizeTextType="uniform" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:gravity="center_horizontal"
            android:text="@string/title2_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display3"
            android:textColor="#000000"
            android:textStyle="bold" />


        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="#ED6679"
            android:text="@string/button5_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:autoSizeTextType="uniform"
            app:cornerRadius="28dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal"
            android:text="@string/title3_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000000"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/button6"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="#101B03"
            android:text="@string/button6_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:autoSizeTextType="uniform"
            app:cornerRadius="28dp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center_horizontal"
            android:text="@string/title4_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#000000"
            android:textStyle="bold"
            app:autoSizeTextType="uniform" />

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="#82FFD700"
            android:text="@string/button7_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:autoSizeTextType="uniform"
            app:cornerRadius="28dp" />

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:backgroundTint="#A260BF"
            android:text="@string/button8_text"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            app:autoSizeTextType="uniform"
            app:cornerRadius="28dp" />


    </LinearLayout>

</ScrollView>




