<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:background="#000000"
            android:gravity="center_horizontal"
            android:text="@string/button2_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="#FFFFFF"
            app:autoSizeTextType="uniform" />

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="695dp"
            android:background="#000000"
            android:contentDescription="@string/image_1"
            android:scaleType="fitCenter"
            app:srcCompat="?attr/colorPrimary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:background="#000000"
            android:text="@string/text2_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#F8F6F6" />



    </LinearLayout>
</ScrollView>



