<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".MainActivity">


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:backgroundTint="#000000"
            android:text="@string/button_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="#FFFFFF"
            android:gravity="center_horizontal"/>

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/imageView1"
            android:layout_width="match_parent"
            android:layout_height="695dp"
            android:background="#000000"
            android:contentDescription="@string/image_1"
            android:scaleType="fitCenter"
            app:srcCompat="?attr/colorPrimary" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:background="#000000"
            android:backgroundTint="#000000"
            android:text="@string/text_label"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#FFFFFF" />


    </LinearLayout>
</ScrollView>



